@@ -1,0 +1,41 @@
+#NGinx Example file for ClanSphere.
+server {
+        listen          80;
+        server_name     example.com www.example.com;
+
+        #Location and Rewrite Rules
+        location / {
+            root   /var/www/example/example.com/;
+
+            if (!-d $request_filename){
+                set $rule_0 1$rule_0;
+            }
+            if (!-f $request_filename){
+                set $rule_0 2$rule_0;
+            }
+            if ($rule_0 = "21"){
+                rewrite ^/([^/]+)(.*)$ /$1.php?params=$2;
+            }
+
+        }
+
+        # PHP Forwarding
+        location ~ \.php$ {
+            try_files      $uri =404;
+            root           /var/www/example/example.com/;
+            fastcgi_pass   127.0.0.1:9000;
+            fastcgi_index  index.php;
+            fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+            include        fastcgi_params;
+        }
+
+        #Deny any .htaccess files
+        location ~* /\.htaccess$ {
+            deny  all;
+        }
+
+        #deny any .tpl files
+        location ~* \.tpl$ {
+            deny  all;
+        }
+    }
