@@ -1,0 +1,14 @@
+<?php
+// ClanSphere 2010 - www.clansphere.net
+// Andrew Tajsic 2012 - www.atajsic.com
+
+$cs_lang['mod_name'] = 'Sessions';
+$cs_lang['mod_info'] = 'Login Sessions';
+$cs_lang['list'] = 'List';
+
+//list
+$cs_lang['inactivity'] = 'Sessions are automatically deleted after 30 days of inactivity.';
+$cs_lang['red'] = 'Red';
+$cs_lang['this_session'] = 'indicates this login session';
+
+?>
