@@ -1,0 +1,16 @@
+<?php
+
+$cs_lang = cs_translate('sessions');
+
+$mod_info['name']    = "Sessions";
+$mod_info['version']  = "0.1";
+$mod_info['released']  = "Jun 2012";
+$mod_info['creator'] = 'Andrew Tajsic';
+$mod_info['team']    = 'Andrew Tajsic';
+$mod_info['url']    = 'www.atajsic.com';
+$mod_info['text']    = $cs_lang['mod_text'];
+$mod_info['icon']    = 'db'; 
+$mod_info['categories']  = FALSE;
+$mod_info['comments']  = FALSE;
+$mod_info['protected']  = TRUE;
+$mod_info['tables']    = array('sessions');
