@@ -12,6 +12,7 @@ ___________________________________________________________
 -> Improved charset detection by sending a header (hajo)
 -> Updated CKEditor to 3.6.3
 -> Updated jQuery to 1.7.2
+-> Multiple user sessions support (Tazzernator)
 
 
 ClanSphere 2011.3 Patch 1 >> 2012-03-31
